<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_IconState" Id="{dc3cfbcd-82a1-4b2e-967f-1b4de2958eb1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_IconState :
(
	Waiting := 0,
	InProgress :=1,
	Completed := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>