<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_RecipeOtherParams" Id="{763caeeb-eece-4c24-860a-4d4f1e134703}">
    <Declaration><![CDATA[TYPE ST_RecipeOtherParams :
STRUCT
	//Other Parameters Group 
	tSoakTime 			: TIME; 	//Time in seconds for the soak step 
	tAgitate1Time 		: TIME; 	//Time in seconds for the Rinse 1 recirculation  
	tAgitade2Time 		: TIME; 	//Time in seconds for the Rinse 1 recirculation   
	iVialsToFill 		: USINT; 		//number 1 to 4 meaning the quantity of Vials line to be filled
	rVialPrimeVol 		: REAL; 	//Volume to be wasted in the prime needle
	rVial1FillVol 		: REAL; 	//Volume used to fill up the first line vials 
	rVials2_4FillVol 	: REAL; 	//Volume used to fill up the second up to fourth line vials 
	tAirDryTime 		: TIME; 	//Time in seconds in the dry step
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>